--- a/src/utilities/common.properties
+++ b/src/utilities/common.properties
@@ -12,10 +12,10 @@ PostButton_xpath = //span/button[normalize-space()='Post']
 commentBoxAfterFBLogin_xpath = //div[@class='_5yk2']
 
 #FB Login New tab 
-## Ideally separate credentials.xml should be provided which should be added to git ignore
 Email_ID = email
 Password_ID = pass
 LogInButton_ID = u_0_0
 
+## Ideally separate credentials.properties should be provided which should be added to git ignore
 emailID_value = pooja907100@gmail.com
 password_value = sdetTe$t11
