Modified common.properties. Removed credentials

--- a/src/utilities/common.properties
+++ b/src/utilities/common.properties
@@ -17,5 +17,5 @@ Password_ID = pass
 LogInButton_ID = u_0_0
 
 ## Ideally separate credentials.properties should be provided which should be added to git ignore
-emailID_value = pooja907100@gmail.com
-password_value = sdetTe$t11
+emailID_value = 
+password_value = 
